src/test/ui/issue-47706-trait.stderr
error[E0601]: main function not found

error[E0593]: function is expected to take a single 0-tuple as argument, but it takes 2 distinct arguments
  --> $DIR/issue-47706-trait.rs:13:20
   |
LL |     fn f(&self, _: ()) {
   |     ------------------ takes 2 distinct arguments
LL |         None::<()>.map(Self::f);
   |                    ^^^ expected function that takes a single 0-tuple as argument

error: aborting due to 2 previous errors

You've got a few errors: E0593, E0601
If you want more information on an error, try using "rustc --explain E0593"
